# OpenCLDecompiler

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: lint.yml  main.yml  test.yml
parsers/asm_parser/amdgpu_dis_format/: __init__.py  parser.py
parsers/base/: __init__.py  and_parser.py  any_parser.py  base_parser.py  ignore_parser.py  line_parser.py  one_or_more_parser.py  one_or_zero_parser.py  or_parser.py  parse_until_parser.py  parser_element_parser.py  zero_or_more_parser.py
parsers/models/: __init__.py
parsers/models/functions/: block.py  config.py
parsers/parse_objects/base/: __init__.py  parse_object.py  (+1 more)
src/: code_printer.py  combined_register_content.py  decompiler.py  decompiler_data.py  global_data.py  instruction_dict.py  kernel_params.py  logical_variable.py  node.py  node_processor.py  opencl_types.py  operation_register_content.py  parser_for_instructions.py  register.py  register_content.py  state.py  unrolled_loops_processing.py  upload.py  versions.py
src/base/: __init__.py
src/exceptions/: __init__.py
src/graph/: __init__.py
src/kernel_parser/: amdcl2_parser.py  parser.py  rocm_parser.py
src/regions/: functions_for_regions.py
src/utils/: __init__.py  driver_format.py  global_context.py  uuid.py
tests/: branching_kernels_test.py  conftest.py  different_flags_test.py  different_types_test.py  disasm.py  global_data_usage_test.py  linear_kernels_test.py  local_memory_kernels_test.py  loops_kernels_test.py  real_kernels_test.py  unused_params_test.py  vector_type_params_test.py
(+78 files in other folders)
